// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostNotFoundDiscoveryView - Snapshots > matches snapshot when composite author is invalid 1`] = `
<div
  data-testid="hot-discovery-content-layout"
>
  <div
    class="flex flex-col gap-12"
    data-override="true"
    data-testid="container"
  >
    <div
      data-has-view-profile="false"
      data-testid="post-not-found-mock"
      data-title="post.notFound.title"
    >
      <button
        data-testid="mock-back-to-feed"
        type="button"
      >
        post.notFound.backToFeed
      </button>
      <button
        data-testid="mock-explore-tags"
        type="button"
      >
        post.notFound.exploreTags
      </button>
    </div>
    <div
      class="flex flex-col gap-2"
      data-override="true"
      data-testid="container"
    >
      <h5
        data-testid="trending-heading"
      >
        hot.trendingPosts
      </h5>
      <div
        data-testid="timeline-feed"
      />
    </div>
  </div>
</div>
`;

exports[`PostNotFoundDiscoveryView - Snapshots > matches snapshot when composite author is valid 1`] = `
<div
  data-testid="hot-discovery-content-layout"
>
  <div
    class="flex flex-col gap-12"
    data-override="true"
    data-testid="container"
  >
    <div
      data-has-view-profile="true"
      data-testid="post-not-found-mock"
      data-title="post.notFound.title"
    >
      <button
        data-testid="mock-back-to-feed"
        type="button"
      >
        post.notFound.backToFeed
      </button>
      <button
        data-testid="mock-view-profile"
        type="button"
      >
        post.notFound.viewProfile
      </button>
      <button
        data-testid="mock-explore-tags"
        type="button"
      >
        post.notFound.exploreTags
      </button>
    </div>
    <div
      class="flex flex-col gap-2"
      data-override="true"
      data-testid="container"
    >
      <h5
        data-testid="trending-heading"
      >
        hot.trendingPosts
      </h5>
      <div
        data-testid="timeline-feed"
      />
    </div>
  </div>
</div>
`;
